--- a/package.json
+++ b/package.json
@@ -15,18 +15,20 @@
         "@babel/preset-env": "^7.1.6",
         "@types/express": "^4.16.0",
         "@types/passport": "^0.4.7",
-        "assets-webpack-plugin": "^3.9.7",
-        "babel-loader": "^8.0.4",
         "body-parser": "^1.18.3",
         "concurrently": "^4.0.1",
         "express": "^4.16.4",
-        "less": "^3.8.1",
-        "less-loader": "^4.1.0",
-        "mini-css-extract-plugin": "^0.4.4",
+        "mysql": "^2.16.0",
         "nodemon": "^1.18.6",
         "passport": "^0.4.0",
-        "typescript": "^3.1.6",
-        "webpack": "^4.25.1",
-        "webpack-dev-server": "^3.1.10"
+        "reflect-metadata": "^0.1.13",
+        "request": "^2.88.0",
+        "request-promise": "^4.2.4",
+        "typeorm": "^0.2.14",
+        "typescript": "^3.1.6"
+    },
+    "devDependencies": {
+        "@types/node": "^11.11.0",
+        "@types/request-promise": "^4.1.42"
     }
 }
