--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
         "baseUrl": ".",
         "paths": {
             "*": ["node_modules/*", "src/types/*"]
-        }
+        },
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true
     },
     "include": ["src/**/*"]
 }
